# gcp-traffic-extension

./: .bazelrc  .gitignore  Dockerfile  README.md  WORKSPACE  build_local.sh  docker-compose.yaml  envoy.yaml  traffic_metadata.yaml
src/: BUILD.bazel  external_processor.cc  external_processor.h  main.cc  utils.cc  utils.h
